--- a/src/components/stock-finder/stock-finder.css
+++ b/src/components/stock-finder/stock-finder.css
@@ -1,6 +1,6 @@
 :host {
     font-family: sans-serif;
-    border: 2px solid #3b013b;
+    border: 2px solid var(--color-primary, black);
     margin: 2rem;
     padding: 1rem;
     display: block;
@@ -10,7 +10,7 @@
   
   form input {
     font: inherit;
-    color: #3b013b;
+    color: var(--color-primary, black);
     padding: 0.1rem 0.25rem;
     display: block;
     margin-bottom: 0.5rem;
@@ -24,8 +24,8 @@
   form button {
     font: inherit;
     padding: 0.25rem 0.5rem;
-    border: 1px solid #3b013b;
-    background: #3b013b;
+    border: 1px solid var(--color-primary, black);
+    background: var(--color-primary, black);
     color: white;
     cursor: pointer;
   }
@@ -58,6 +58,6 @@
   
   li:hover,
   li:active {
-    background: #3b013b;
+    background: var(--color-primary, black);
     color: white;
   }
